feat!: upgrade to 5.0.0
[FEAT]
* Angular: Switch to PrimeNG UI instead of Clarity Design

[TEST]
* Add Cypress Component tests
* Add Cypress end-to-end tests

[TECH]
* upgrade to Angular 17
* upgrade to JDK 21
* upgrade to Spring-boot 3.2
* add Docker / docker-compose configuration